Bumps page icon size to stop jumping

--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ nav {
   .icon {
     margin-right: auto;
     svg {
-      width: 2.5rem;
-      height: 2.5rem;
+      width: 2.75rem;
+      height: 2.75rem;
     }
   }
   button {
